[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Blob/BlobSpriteFrames.res" type="SpriteFrames" id=1]
[ext_resource path="res://Enemies/EnemyScript.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Templates/defaultstats.tres" type="Resource" id=3]

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.0
height = 0.0

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
enemy_stat_block = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Walk"

[node name="Walkbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="DetectionRange" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
visible = false
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
